updated loadData documentation

--- a/src/loadData.ipynb
+++ b/src/loadData.ipynb
@@ -7,7 +7,7 @@
     "# loadData.ipynb\n",
     "\n",
     "##### Purpose:\n",
-    "Download, loads, aggregates and creates final data steps\n",
+    "Download, loads, aggregates and creates the final data tables\n",
     "\n",
     "##### Steps:\n",
     "1. Create data folders to house any data files\n",
@@ -18,7 +18,7 @@
     "6. Build the final data sets\n",
     "\n",
     "##### Remarks:\n",
-    "- **Its important to check the settings of each step before its ran, some steps may duplicate their data if ran multiple times**\n",
+    "- **Its important to check the documentation of each script before running, some steps may duplicate their data if ran multiple times**\n",
     "\n",
     "<br>\n",
     "\n",
@@ -300,6 +300,9 @@
     "Purpose:  \n",
     "Runs the following file to [setup the geometries and stations](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/WeatherStation/importBoundariesAndStations.ipynb)\n",
     "\n",
+    "Output:  \n",
+    "- [census_ag_regions](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#census_ag_regions)\n",
+    "\n",
     "Updating the data:\n",
     "- this only needs to be run once\n",
     "- in the event the areas or weather stations change, the script will override whatever was already stored"
@@ -321,6 +324,9 @@
     "Purpose:  \n",
     "Runs the following file to [setup the ergot data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/Ergot/importErgot.ipynb)\n",
     "\n",
+    "Output:  \n",
+    "- [ergot_sample](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#ergot_sample)\n",
+    "\n",
     "Updating the data:\n",
     "- this only needs to be run once\n",
     "- in the event the ergot data change, the script will override whatever was already stored"
@@ -341,6 +347,9 @@
    "source": [
     "Purpose:  \n",
     "Runs the following file to [setup the soil moisture data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/SatelliteSoilMoisture/PullMoistureData.py)\n",
+    "\n",
+    "Output:  \n",
+    "- [soil_moisture](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#soil_moisture)\n",
     "\n",
     "Updating the data:\n",
     "- this only needs to be run once (data gets appended to the existing table)\n",
@@ -364,6 +373,13 @@
    "source": [
     "Purpose:  \n",
     "Runs the following file to [setup the soil data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/Soil/importSoil.ipynb)\n",
+    "\n",
+    "Output:  \n",
+    "- [soil_components](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#soil_components)\n",
+    "- [soil_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#soil_data)\n",
+    "- [soil_geometry](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#soil_geometry)\n",
+    "- [soil_surronding_land](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#soil_surronding_land)\n",
+    "\n",
     "\n",
     "Updating the data:\n",
     "- this only needs to be run once \n",
@@ -486,6 +502,12 @@
     "Purpose:  \n",
     "Loads the daily weather station data\n",
     "\n",
+    "Output:  \n",
+    "- [ab_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#ab_dly_station_data)\n",
+    "- [mb_dly_staion_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#mb_dly_staion_data)\n",
+    "- [sk_dly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#sk_dly_station_data)\n",
+    "- [station_data_last_updated](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#station_data_last_updated)\n",
+    "\n",
     "Updating the data: \n",
     "- This script will always pull data from the last year data was pulled for plus any data after that\n",
     "- Stations can be manually disabled by updated their [is_active column](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#station_data_last_updated)\n",
@@ -493,7 +515,8 @@
     "\n",
     "Remarks: \n",
     "- Data that was already stored gets deleted (no duplicates are ever stored)\n",
-    "- Logs are not set up, however if an error is encountered it will be recorded in the console and that particular station would be skipped over"
+    "- Logs are not set up, however if an error is encountered it will be recorded in the console and that particular station would be skipped over\n",
+    "- if the need to pull earlier data arises, changes will need to be made to avoid checking the last date pulled as well as changing the minimum year from 1995"
    ]
   },
   {
@@ -511,6 +534,11 @@
    "source": [
     "Purpose:  \n",
     "Loads the hourly weather station data\n",
+    "\n",
+    "Output:  \n",
+    "- [ab_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#ab_hly_station_data)\n",
+    "- [mb_hly_staion_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#mb_hly_staion_data)\n",
+    "- [sk_hly_station_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#sk_hly_station_data)\n",
     "\n",
     "Updating the data: \n",
     "- This script will always pull all data within the full range of when a weather station has data\n",
@@ -535,6 +563,9 @@
    "source": [
     "Purpose:  \n",
     "Loads the Copernicus satellite weather data\n",
+    "\n",
+    "Output:  \n",
+    "- [agg_day_copernicus_satellite_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#agg_day_copernicus_satellite_data)\n",
     "\n",
     "Updating the data: \n",
     "- This script will only pull data that has not been stored in the database yet\n",
@@ -567,6 +598,10 @@
     "Purpose:  \n",
     "Aggregates the ergot data\n",
     "\n",
+    "Output:  \n",
+    "- [agg_ergot_sample](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#agg_ergot_sample)\n",
+    "- [agg_ergot_sample_v2](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#agg_ergot_sample_v2)\n",
+    "\n",
     "Updating the data: \n",
     "- Rerunning this script will replace previous data"
    ]
@@ -586,6 +621,9 @@
    "source": [
     "Purpose:  \n",
     "Aggregates the ergot data\n",
+    "\n",
+    "Output:  \n",
+    "- [ergot_sample_feat_eng](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#ergot_sample_feat_eng)\n",
     "\n",
     "Updating the data: \n",
     "- Rerunning this script will replace previous data"
@@ -607,6 +645,9 @@
     "Purpose:  \n",
     "Aggregates the weather station data (daily and hourly)\n",
     "\n",
+    "Output:  \n",
+    "- [agg_weather_combined](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#agg_weather_combined)\n",
+    "\n",
     "Updating the data: \n",
     "- Rerunning this script will replace previous data"
    ]
@@ -627,6 +668,9 @@
     "Purpose:  \n",
     "Aggregates the soil data\n",
     "\n",
+    "Output:  \n",
+    "- [agg_soil_data](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#agg_soil_data)\n",
+    "\n",
     "Updating the data: \n",
     "- Rerunning this script will replace previous data"
    ]
@@ -646,6 +690,9 @@
    "source": [
     "Purpose:  \n",
     "Aggregates the soil moisture data\n",
+    "\n",
+    "Output:  \n",
+    "- [agg_soil_moisture](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/tree/main#agg_soil_moisture)\n",
     "\n",
     "Updating the data: \n",
     "- Rerunning this script will replace previous data"
@@ -770,7 +817,11 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Creates exploratory datasets and loads them into a csv file (too many columns for the database)\n",
+    "[Creates exploratory datasets](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions/blob/main/src/Datasets/setCreator.py) and loads them into a csv file (too many columns for the database)\n",
+    "\n",
+    "Output:  \n",
+    "- 6 CSV files corresponding to the weather station and soil moisture data aggregated by day, week and month\n",
+    "    - These have no links as they are ignored and not saved in the repository\n",
     "\n",
     "Remarks: these csv files can be found within the DatasetsData folder"
    ]
@@ -789,7 +840,31 @@
    "metadata": {},
    "source": [
     "Purpose:  \n",
-    "Creates the final datasets and loads them into the database"
+    "Creates the final datasets and loads them into the database\n",
+    "\n",
+    "Output:  \n",
+    "- [dataset_daily_sat](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_daily_sat)\n",
+    "- [dataset_weekly_sat](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_weekly_sat)\n",
+    "- [dataset_monthly_sat](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_monthly_sat)\n",
+    "- [dataset_cross_monthly_sat](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_monthly_sat)\n",
+    "- [dataset_cross_weekly_sat_JFMA](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_sat_JFMA)\n",
+    "- [dataset_cross_weekly_sat_MAMJ](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_sat_MAMJ)\n",
+    "- [dataset_cross_weekly_sat_MJJA](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_sat_MJJA)\n",
+    "- [dataset_cross_weekly_sat_JASO](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_sat_JASO)\n",
+    "- [dataset_daily_station](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_daily_station)\n",
+    "- [dataset_weekly_station](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_weekly_station)\n",
+    "- [dataset_monthly_station](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_monthly_station)\n",
+    "- [dataset_cross_monthly_station](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_monthly_station)\n",
+    "- [dataset_cross_weekly_station_JFMA](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_station_JFMA)\n",
+    "- [dataset_cross_weekly_station_MAMJ](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_station_MAMJ)\n",
+    "- [dataset_cross_weekly_station_MJJA](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_station_MJJA)\n",
+    "- [dataset_cross_weekly_station_JASO](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_cross_weekly_station_JASO)\n",
+    "- [dataset_daily_sat_soil](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_daily_sat_soil)\n",
+    "- [dataset_weekly_sat_soil](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_weekly_sat_soil)\n",
+    "- [dataset_monthly_sat_soil](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_monthly_sat_soil)\n",
+    "- [dataset_daily_station_soil](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_daily_station_soil)\n",
+    "- [dataset_weekly_station_soil](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_weekly_station_soil)\n",
+    "- [dataset_monthly_station_soil](https://github.com/ChromaticPanic/CGC_Grain_Outcome_Predictions#dataset_monthly_station_soil)"
    ]
   },
   {
