finished adding harvest aggregate
finished adding harvest aggregate

--- a/src/Models/dimReduction.ipynb
+++ b/src/Models/dimReduction.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "for currData in dataset2:\n",
     "    trainningData = currData[\"train\"]\n",
-    "    trainY = trainningData[\"ergot_present_in_q4\"]\n",
+    "    trainY = trainningData[\"has_ergot\"]\n",
     "    trainX = setModifier.rmErgotFeatures(trainningData)\n",
     "\n",
     "    reducable = True  # controls the loop, is true by default then is determined by\n",
