--- a/src/Soil/soilAggregation.ipynb
+++ b/src/Soil/soilAggregation.ipynb
@@ -243,12 +243,12 @@
    "source": [
     "def pullSoilGeometry(conn: sq.engine.Connection) -> pd.DataFrame:\n",
     "    # load the boundaries for the agriculture regions\n",
-    "    regionQuery = sq.text(\"select district, geometry FROM public.{AG_REGIONS_TABLE}\")\n",
+    "    regionQuery = sq.text(f\"select district, geometry FROM public.{AG_REGIONS_TABLE}\")\n",
     "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "        regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     "    )\n",
     "\n",
-    "    soilQuery = sq.text(\"select * FROM public.{SOIL_GEOM_TABLE}\")\n",
+    "    soilQuery = sq.text(f\"select * FROM public.{SOIL_GEOM_TABLE}\")\n",
     "    soilRegions = gpd.GeoDataFrame.from_postgis(\n",
     "        soilQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     "    )\n",
