--- a/src/Models/SVM/SVMSatellite.ipynb
+++ b/src/Models/SVM/SVMSatellite.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downgrade\n",
+      "False    122202\n",
+      "True       2082\n",
+      "Name: count, dtype: int64\n",
+      "downgrade\n",
+      "False    26307\n",
+      "True      1016\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# pre balancing check\n",
     "# print value counts downgrade\n",
@@ -176,9 +191,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downgrade                           0\n",
+      "1:min_dewpoint_temperature          0\n",
+      "1:min_temperature                   0\n",
+      "1:min_evaporation_from_bare_soil    0\n",
+      "1:min_skin_reservoir_content        0\n",
+      "                                   ..\n",
+      "district_4830                       0\n",
+      "district_4840                       0\n",
+      "district_4850                       0\n",
+      "district_4860                       0\n",
+      "district_4870                       0\n",
+      "Length: 687, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# count nan\n",
     "print(trainDf.isna().sum())\n",
@@ -198,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,9 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "downgrade\n",
+      "False    115239\n",
+      "True      25156\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "print(balancedTrainDfY.value_counts())"
    ]
@@ -236,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,12 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "svm_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
-    "balanced_svm_model.fit(balancedTrainDfX.drop(columns=\"downgrade\"), balancedTrainDfX[\"downgrade\"])"
+    "balanced_svm_model.fit(balancedTrainDfX, balancedTrainDfY)"
    ]
   },
   {
