--- a/src/Models/Boost/BoostSatellitePrevEng.ipynb
+++ b/src/Models/Boost/BoostSatellitePrevEng.ipynb
@@ -155,6 +155,9 @@
     "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
     "\n",
     "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
+    "datasetDf['present_prev1'] = datasetDf['present_prev1'].astype('bool')\n",
+    "datasetDf['present_prev2'] = datasetDf['present_prev2'].astype('bool')\n",
+    "datasetDf['present_prev3'] = datasetDf['present_prev3'].astype('bool')\n",
     "\n",
     "del temp"
    ]
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -405,65 +408,13 @@
      "output_type": "stream",
      "text": [
       "      Iter       Train Loss   Remaining Time \n",
-      "         1           0.1921          112.16m\n",
-      "         2           0.1861          111.53m\n",
-      "         3           0.1819          112.61m\n",
-      "         4           0.1786          110.64m\n",
-      "         5           0.1761          109.36m\n",
-      "         6           0.1739          106.10m\n",
-      "         7           0.1722          103.74m\n",
-      "         8           0.1707          101.89m\n",
-      "         9           0.1695          100.37m\n",
-      "        10           0.1684           99.00m\n",
-      "        20           0.1630           90.85m\n",
-      "        30           0.1614           85.14m\n",
-      "        40           0.1608           80.97m\n",
-      "        50           0.1607           77.42m\n",
-      "        60           0.1606           72.89m\n",
-      "        70           0.1606           68.80m\n",
-      "        80           0.1606           65.57m\n",
-      "        90           0.1605           62.67m\n",
-      "       100           0.1605           59.85m\n",
-      "       200           0.1605           37.64m\n",
-      "      Iter       Train Loss   Remaining Time \n",
-      "         1           0.7215          179.67m\n",
-      "         2           0.6057          177.42m\n",
-      "         3           0.5200          176.58m\n",
-      "         4           0.4521          175.92m\n",
-      "         5           0.3963          175.83m\n",
-      "         6           0.3494          175.86m\n",
-      "         7           0.3094          176.03m\n",
-      "         8           0.2749          174.85m\n",
-      "         9           0.2449          173.76m\n",
-      "        10           0.2186          174.09m\n",
-      "        20           0.0749          168.00m\n",
-      "        30           0.0269          161.64m\n",
-      "        40           0.0098          155.96m\n",
-      "        50           0.0036          150.83m\n",
-      "        60           0.0013          144.78m\n",
-      "        70           0.0005          139.22m\n",
-      "        80           0.0002          134.05m\n",
-      "        90           0.0001          129.15m\n",
-      "       100           0.0000          124.44m\n",
-      "       200           0.0000           70.12m\n",
-      "       300           0.0000           23.38m\n"
+      "         1           0.1921          782.22m\n",
+      "         2           0.1861          776.89m\n",
+      "         3           0.1819          775.55m\n",
+      "         4           0.1786          766.19m\n",
+      "         5           0.1761          753.05m\n",
+      "         6           0.1739          687.79m\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GradientBoostingClassifier(max_depth=40, n_estimators=400, n_iter_no_change=200,\n",
-       "                           random_state=42, verbose=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GradientBoostingClassifier</label><div class=\"sk-toggleable__content\"><pre>GradientBoostingClassifier(max_depth=40, n_estimators=400, n_iter_no_change=200,\n",
-       "                           random_state=42, verbose=1)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "GradientBoostingClassifier(max_depth=40, n_estimators=400, n_iter_no_change=200,\n",
-       "                           random_state=42, verbose=1)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -473,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
