--- a/src/Models/Boost/BoostSatellitePrevEng.ipynb
+++ b/src/Models/Boost/BoostSatellitePrevEng.ipynb
@@ -155,9 +155,9 @@
     "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
     "\n",
     "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
-    "datasetDf['present_prev1'] = datasetDf['present_prev1'].astype('bool')\n",
-    "datasetDf['present_prev2'] = datasetDf['present_prev2'].astype('bool')\n",
-    "datasetDf['present_prev3'] = datasetDf['present_prev3'].astype('bool')\n",
+    "datasetDf[\"present_prev1\"] = datasetDf[\"present_prev1\"].astype('bool')\n",
+    "datasetDf[\"present_prev2\"] = datasetDf[\"present_prev2\"].astype('bool')\n",
+    "datasetDf[\"present_prev3\"] = datasetDf[\"present_prev3\"].astype('bool')\n",
     "\n",
     "del temp"
    ]
@@ -413,7 +413,13 @@
       "         3           0.1819          775.55m\n",
       "         4           0.1786          766.19m\n",
       "         5           0.1761          753.05m\n",
-      "         6           0.1739          687.79m\n"
+      "         6           0.1739          687.79m\n",
+      "         7           0.1722          627.68m\n",
+      "         8           0.1707          588.95m\n",
+      "         9           0.1695          534.67m\n",
+      "        10           0.1684          489.71m\n",
+      "        20           0.1630          286.10m\n",
+      "        30           0.1614          215.93m\n"
      ]
     }
    ],
