--- a/src/Models/LSTM/LSTMStation.ipynb
+++ b/src/Models/LSTM/LSTMStation.ipynb
@@ -15,10 +15,12 @@
    "outputs": [],
    "source": [
     "# import dependencies\n",
+    "from ModelBuilderMethods import getConn, extractYears\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlalchemy as sq\n",
-    "import sys, os\n",
+    "import sys\n",
+    "import os\n",
     "import pickle\n",
     "from imblearn.combine import SMOTEENN\n",
     "from imblearn.ensemble import (  # type: ignore\n",
@@ -38,8 +40,7 @@
     "from tensorflow.keras.layers import Dense, LSTM, Dropout\n",
     "\n",
     "sys.path.append(\"../../\")\n",
-    "os.chdir(\"../../\")\n",
-    "from ModelBuilderMethods import getConn, extractYears"
+    "os.chdir(\"../../\")"
    ]
   },
   {
@@ -111,7 +112,8 @@
     "tempdf = stationDf\n",
     "\n",
     "# merge on year and district\n",
-    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
+    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\n",
+    "                     \"year\", \"district\"], how=\"left\")\n",
     "del ergotTargetDf\n",
     "del tempdf"
    ]
@@ -125,7 +127,8 @@
     "# encode district\n",
     "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
     "\n",
-    "temp = pd.get_dummies(datasetDf[\"district\"], prefix=\"district\", drop_first=True)\n",
+    "temp = pd.get_dummies(datasetDf[\"district\"],\n",
+    "                      prefix=\"district\", drop_first=True)\n",
     "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
     "\n",
     "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
@@ -289,27 +292,27 @@
     "    model = Sequential()\n",
     "\n",
     "    # Adding the first LSTM layer and some Dropout regularisation\n",
-    "    model.add(LSTM(units = units, return_sequences = True, input_shape = (n_input, 1)))\n",
+    "    model.add(LSTM(units=units, return_sequences=True, input_shape=(n_input, 1)))\n",
     "    model.add(Dropout(dropout_rate))\n",
     "\n",
     "    # Adding a second LSTM layer and some Dropout regularisation\n",
-    "    model.add(LSTM(units = units, return_sequences = True))\n",
+    "    model.add(LSTM(units=units, return_sequences=True))\n",
     "    model.add(Dropout(dropout_rate))\n",
     "\n",
     "    # Adding a third LSTM layer and some Dropout regularisation\n",
-    "    model.add(LSTM(units = units, return_sequences = True))\n",
+    "    model.add(LSTM(units=units, return_sequences=True))\n",
     "    model.add(Dropout(dropout_rate))\n",
     "\n",
     "    # Adding a fourth LSTM layer and some Dropout regularisation\n",
-    "    model.add(LSTM(units = units))\n",
+    "    model.add(LSTM(units=units))\n",
     "    model.add(Dropout(dropout_rate))\n",
     "\n",
     "    # Adding the output layer\n",
-    "    model.add(Dense(units = n_output))\n",
+    "    model.add(Dense(units=n_output))\n",
     "\n",
     "    # Compiling the RNN\n",
-    "    model.compile(optimizer = optimizer, loss = 'mean_absolute_error')\n",
-    "    \n",
+    "    model.compile(optimizer=optimizer, loss='mean_absolute_error')\n",
+    "\n",
     "    return model"
    ]
   },
