--- a/src/Models/KNN/KNNSatellite.ipynb
+++ b/src/Models/KNN/KNNSatellite.ipynb
@@ -455,9 +455,7 @@
     }
    ],
    "source": [
-    "printMetrics(\n",
-    "    \"KNN imbalanced train set\", testDf[\"downgrade\"], predictions_knn\n",
-    ")\n",
+    "printMetrics(\"KNN imbalanced train set\", testDf[\"downgrade\"], predictions_knn)\n",
     "printMetrics(\n",
     "    \"KNN balanced train set\",\n",
     "    testDf[\"downgrade\"],\n",
