--- a/src/Models/LSTM/LSTMSatellite.ipynb
+++ b/src/Models/LSTM/LSTMSatellite.ipynb
@@ -112,8 +112,7 @@
     "tempdf = stationDf\n",
     "\n",
     "# merge on year and district\n",
-    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\n",
-    "                     \"year\", \"district\"], how=\"left\")\n",
+    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
     "del ergotTargetDf\n",
     "del tempdf"
    ]
@@ -127,8 +126,7 @@
     "# encode district\n",
     "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
     "\n",
-    "temp = pd.get_dummies(datasetDf[\"district\"],\n",
-    "                      prefix=\"district\", drop_first=True)\n",
+    "temp = pd.get_dummies(datasetDf[\"district\"], prefix=\"district\", drop_first=True)\n",
     "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
     "\n",
     "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
@@ -287,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def LSTM_model(n_input, n_output, units=50, dropout_rate=0.2, optimizer='adam'):\n",
+    "def LSTM_model(n_input, n_output, units=50, dropout_rate=0.2, optimizer=\"adam\"):\n",
     "    # using sequential to build LSTM model\n",
     "    model = Sequential()\n",
     "\n",
@@ -311,7 +309,7 @@
     "    model.add(Dense(units=n_output))\n",
     "\n",
     "    # Compiling the RNN\n",
-    "    model.compile(optimizer=optimizer, loss='mean_absolute_error')\n",
+    "    model.compile(optimizer=optimizer, loss=\"mean_absolute_error\")\n",
     "\n",
     "    return model"
    ]
