--- a/src/Models/SVM/SVMSatellite.ipynb
+++ b/src/Models/SVM/SVMSatellite.ipynb
@@ -388,9 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "printMetrics(\n",
-    "    \"SVM imbalanced train set\", testDf[\"downgrade\"], predictions_svm\n",
-    ")\n",
+    "printMetrics(\"SVM imbalanced train set\", testDf[\"downgrade\"], predictions_svm)\n",
     "printMetrics(\n",
     "    \"SVM balanced train set\",\n",
     "    testDf[\"downgrade\"],\n",
@@ -424,10 +422,7 @@
     "        unbal_model = SVC(kernel=k, C=c)\n",
     "        unbal_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "        y_pred = unbal_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "        printMetrics(\n",
-    "            \"SVM imbalanced train set\", testDf[\"downgrade\"], unbal_model\n",
-    "        )\n",
-    "\n",
+    "        printMetrics(\"SVM imbalanced train set\", testDf[\"downgrade\"], unbal_model)\n",
     "\n",
     "        # Train & Test model on balanced data\n",
     "        bal_model = SVC(kernel=k, C=c)\n",
@@ -437,8 +432,7 @@
     "            \"SVM balanced train set\",\n",
     "            testDf[\"downgrade\"],\n",
     "            bal_model,\n",
-    "        )\n",
-    "        "
+    "        )"
    ]
   }
  ],
