--- a/src/Models/SVM/SVMStation.ipynb
+++ b/src/Models/SVM/SVMStation.ipynb
@@ -14,13 +14,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ModelBuilderMethods import getConn, extractYears\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split  # type: ignore\n",
     "from sklearn.preprocessing import StandardScaler  # type: ignore\n",
     "# import dependencies\n",
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
-    "import sys, os\n",
+    "import sys\n",
+    "import os\n",
     "from imblearn.combine import SMOTEENN\n",
     "from sklearn.svm import SVC  # type: ignore\n",
     "\n",
@@ -34,8 +36,7 @@
     ")\n",
     "\n",
     "sys.path.append(\"../../\")\n",
-    "os.chdir(\"../../\")\n",
-    "from ModelBuilderMethods import getConn, extractYears"
+    "os.chdir(\"../../\")"
    ]
   },
   {
@@ -107,7 +108,8 @@
     "tempdf = stationDf\n",
     "\n",
     "# merge on year and district\n",
-    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
+    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\n",
+    "                     \"year\", \"district\"], how=\"left\")\n",
     "del ergotTargetDf\n",
     "del tempdf"
    ]
@@ -121,7 +123,8 @@
     "# encode district\n",
     "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
     "\n",
-    "temp = pd.get_dummies(datasetDf[\"district\"], prefix=\"district\", drop_first=True)\n",
+    "temp = pd.get_dummies(datasetDf[\"district\"],\n",
+    "                      prefix=\"district\", drop_first=True)\n",
     "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
     "\n",
     "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
@@ -292,7 +295,9 @@
    "outputs": [],
    "source": [
     "svm_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
-    "balanced_svm_model.fit(balancedTrainDfX.drop(columns=\"downgrade\"), balancedTrainDfX[\"downgrade\"])"
+    "balanced_svm_model.fit(\n",
+    "    balancedTrainDfX.drop(columns=\"downgrade\"), balancedTrainDfX[\"downgrade\"]\n",
+    ")"
    ]
   },
   {
@@ -310,7 +315,8 @@
    "outputs": [],
    "source": [
     "predictions_svm = svm_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_svm = balanced_svm_model.predict(testDf.drop(columns=\"downgrade\"))"
+    "predictions_balanced_svm = balanced_svm_model.predict(\n",
+    "    testDf.drop(columns=\"downgrade\"))"
    ]
   },
   {
@@ -376,12 +382,12 @@
     "\n",
     "        # Train & Test model on unbalanced data\n",
     "        unbal_model = SVC(kernel=k, C=c)\n",
-    "        unbal_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
+    "        unbal_model.fit(trainDf.drop(columns=\"downgrade\"),\n",
+    "                        trainDf[\"downgrade\"])\n",
     "        y_pred = unbal_model.predict(testDf.drop(columns=\"downgrade\"))\n",
     "        printMetrics(\n",
     "            \"SVM imbalanced train set\", testDf[\"downgrade\"], unbal_model\n",
     "        )\n",
-    "\n",
     "\n",
     "        # Train & Test model on balanced data\n",
     "        bal_model = SVC(kernel=k, C=c)\n",
@@ -391,8 +397,7 @@
     "            \"SVM balanced train set\",\n",
     "            testDf[\"downgrade\"],\n",
     "            bal_model,\n",
-    "        )\n",
-    "        "
+    "        )"
    ]
   }
  ],
