please pass black

--- a/src/Models/Boost/BoostSatellitePrevEng.ipynb
+++ b/src/Models/Boost/BoostSatellitePrevEng.ipynb
@@ -155,9 +155,9 @@
     "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
     "\n",
     "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
-    "datasetDf[\"present_prev1\"] = datasetDf[\"present_prev1\"].astype('bool')\n",
-    "datasetDf[\"present_prev2\"] = datasetDf[\"present_prev2\"].astype('bool')\n",
-    "datasetDf[\"present_prev3\"] = datasetDf[\"present_prev3\"].astype('bool')\n",
+    "datasetDf[\"present_prev1\"] = datasetDf[\"present_prev1\"].astype(\"bool\")\n",
+    "datasetDf[\"present_prev2\"] = datasetDf[\"present_prev2\"].astype(\"bool\")\n",
+    "datasetDf[\"present_prev3\"] = datasetDf[\"present_prev3\"].astype(\"bool\")\n",
     "\n",
     "del temp"
    ]
@@ -419,7 +419,14 @@
       "         9           0.1695          534.67m\n",
       "        10           0.1684          489.71m\n",
       "        20           0.1630          286.10m\n",
-      "        30           0.1614          215.93m\n"
+      "        30           0.1614          215.93m\n",
+      "        40           0.1608          178.71m\n",
+      "        50           0.1607          157.61m\n",
+      "        60           0.1606          139.41m\n",
+      "        70           0.1606          125.12m\n",
+      "        80           0.1606          113.72m\n",
+      "        90           0.1605          104.54m\n",
+      "       100           0.1605           96.61m\n"
      ]
     }
    ],
