--- a/src/Models/SVM/SVMStation.ipynb
+++ b/src/Models/SVM/SVMStation.ipynb
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split  # type: ignore\n",
     "from sklearn.preprocessing import StandardScaler  # type: ignore\n",
+    "\n",
     "# import dependencies\n",
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
@@ -108,8 +109,7 @@
     "tempdf = stationDf\n",
     "\n",
     "# merge on year and district\n",
-    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\n",
-    "                     \"year\", \"district\"], how=\"left\")\n",
+    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
     "del ergotTargetDf\n",
     "del tempdf"
    ]
@@ -123,8 +123,7 @@
     "# encode district\n",
     "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
     "\n",
-    "temp = pd.get_dummies(datasetDf[\"district\"],\n",
-    "                      prefix=\"district\", drop_first=True)\n",
+    "temp = pd.get_dummies(datasetDf[\"district\"], prefix=\"district\", drop_first=True)\n",
     "datasetDf = pd.concat([datasetDf, temp], axis=1)\n",
     "\n",
     "datasetDf = datasetDf.drop(columns=[\"district\"])\n",
@@ -348,9 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "printMetrics(\n",
-    "    \"SVM imbalanced train set\", testDf[\"downgrade\"], predictions_svm\n",
-    ")\n",
+    "printMetrics(\"SVM imbalanced train set\", testDf[\"downgrade\"], predictions_svm)\n",
     "printMetrics(\n",
     "    \"SVM balanced train set\",\n",
     "    testDf[\"downgrade\"],\n",
@@ -382,12 +379,9 @@
     "\n",
     "        # Train & Test model on unbalanced data\n",
     "        unbal_model = SVC(kernel=k, C=c)\n",
-    "        unbal_model.fit(trainDf.drop(columns=\"downgrade\"),\n",
-    "                        trainDf[\"downgrade\"])\n",
+    "        unbal_model.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "        y_pred = unbal_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "        printMetrics(\n",
-    "            \"SVM imbalanced train set\", testDf[\"downgrade\"], unbal_model\n",
-    "        )\n",
+    "        printMetrics(\"SVM imbalanced train set\", testDf[\"downgrade\"], unbal_model)\n",
     "\n",
     "        # Train & Test model on balanced data\n",
     "        bal_model = SVC(kernel=k, C=c)\n",
