--- a/src/Models/SVM/SVMStation.ipynb
+++ b/src/Models/SVM/SVMStation.ipynb
@@ -314,8 +314,7 @@
    "outputs": [],
    "source": [
     "predictions_svm = svm_model.predict(testDf.drop(columns=\"downgrade\"))\n",
-    "predictions_balanced_svm = balanced_svm_model.predict(\n",
-    "    testDf.drop(columns=\"downgrade\"))"
+    "predictions_balanced_svm = balanced_svm_model.predict(testDf.drop(columns=\"downgrade\"))"
    ]
   },
   {
