rearrange import order

--- a/src/Models/KNN/KNNStation.ipynb
+++ b/src/Models/KNN/KNNStation.ipynb
@@ -14,7 +14,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ModelBuilderMethods import getConn, extractYears\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split  # type: ignore\n",
     "from sklearn.preprocessing import StandardScaler  # type: ignore\n",
@@ -37,7 +36,8 @@
     ")\n",
     "\n",
     "sys.path.append(\"../../\")\n",
-    "os.chdir(\"../../\")"
+    "os.chdir(\"../../\")\n",
+    "from ModelBuilderMethods import getConn, extractYears"
    ]
   },
   {
