--- a/src/Models/LSTM/LSTMSatellite.ipynb
+++ b/src/Models/LSTM/LSTMSatellite.ipynb
@@ -15,7 +15,6 @@
    "outputs": [],
    "source": [
     "# import dependencies\n",
-    "from ModelBuilderMethods import getConn, extractYears\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlalchemy as sq\n",
@@ -40,7 +39,8 @@
     "from tensorflow.keras.layers import Dense, LSTM, Dropout\n",
     "\n",
     "sys.path.append(\"../../\")\n",
-    "os.chdir(\"../../\")"
+    "os.chdir(\"../../\")\n",
+    "from ModelBuilderMethods import getConn, extractYears"
    ]
   },
   {
