--- a/src/Models/SVM/SVMStation.ipynb
+++ b/src/Models/SVM/SVMStation.ipynb
@@ -10,11 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ModelBuilderMethods'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mModelBuilderMethods\u001b[39;00m \u001b[39mimport\u001b[39;00m getConn, extractYears\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split  \u001b[39m# type: ignore\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ModelBuilderMethods'"
+     ]
+    }
+   ],
    "source": [
-    "from ModelBuilderMethods import getConn, extractYears\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split  # type: ignore\n",
     "from sklearn.preprocessing import StandardScaler  # type: ignore\n",
@@ -37,7 +48,8 @@
     ")\n",
     "\n",
     "sys.path.append(\"../../\")\n",
-    "os.chdir(\"../../\")"
+    "os.chdir(\"../../\")\n",
+    "from ModelBuilderMethods import getConn, extractYears"
    ]
   },
   {
